syntax = "proto3";
import "common/proto/signature_info.proto";

package resdb.ooohs;

message Certificate {
  SignatureInfo sign = 1;
  int32 view = 2;
  int32 signer = 3;
  bytes hash = 4;
  int32 slot = 5;
}

message Transaction{
  int32 id = 1;
  bytes data = 2;
  bytes hash = 3;
  int32 proxy_id = 4;
  int32 proposer = 5;
  uint64 timestamp = 6;
  int64 user_seq = 7;
}

enum ProposalType{
    NewMsg  = 0;
    Prepared = 1;
    Commit = 2;
    Ready_execute = 3;
}

message QC {
  repeated SignatureInfo signatures = 1;
  int32 view = 2;
  bytes hash = 3;
  int32 slot = 4;
}

message Header {
  int32 proposer_id = 1;
  int32 proposal_id = 2;
  int32 view = 3;
  int32 slot = 4;
  QC qc = 5;
  bytes prehash = 6;
}

message Proposal {
  Header header = 1;
  repeated Transaction transactions = 2;
  int32 sender = 3;
  bytes hash = 4;
};

enum MessageType {
  NewProposal = 0;
  Vote = 1;
};

